# ep3mx

./: .gitignore  .travis.yml  AUTHORS  Makefile  Makefile.am  Makefile.zed  README  README.md  configure.ac  metakeysquash.c
include/: opf.h  parser.h
src/: Makefile.am  dbg.h  metakeysquash.c  opf-handler.c  parse-stdin.c  parser.c  parser.h  squash-meta-slist.c
test/: Makefile.am  squash-meta-test.c  squash-meta.c  test-handler.c
test/fixture/: sample-bad.xml  sample.xml
tests/: parser_tests.c  runtests.sh
