#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([ep3mx], [0.0.1], [kjetil@flovild-midtlie.name])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/parser.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h wchar.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_CONFIG_FILES([Makefile src/Makefile])
# Checks for library functions.

AC_OUTPUT
